--- a/source/fproxy.csproj
+++ b/source/fproxy.csproj
@@ -5,11 +5,11 @@
         <TargetFramework>net8.0</TargetFramework>
         <RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
         <SelfContained>false</SelfContained>
-        <Version>0.0.1</Version>
-        <FileVersion>0.0.1</FileVersion>
+        <Version>0.3.0</Version>
+        <FileVersion>0.3.0</FileVersion>
         <Authors>Lifailon</Authors>
-        <ProjectUrl>https://github.com/Lifailon/ReverseProxyNET</ProjectUrl>
-        <AssemblyTitle>Reverse proxy server base on .NET</AssemblyTitle>
+        <ProjectUrl>https://github.com/Lifailon/froxy</ProjectUrl>
+        <AssemblyTitle>Forward and Reverse proxy base on .NET for TCP, UDP protocols and GET and POST methods for HTTP/HTTPS</AssemblyTitle>
     </PropertyGroup>
     <ItemGroup>
         <Compile Remove="test\*" />
