--- a/dockerfile-pre-build
+++ b/dockerfile-pre-build
@@ -14,10 +14,11 @@ WORKDIR /froxy
 
 COPY --from=build /froxy/bin/net8.0 ./
 
+ENV SOCKS=""
 ENV FORWARD=""
 ENV LOCAL=""
 ENV REMOTE=""
 ENV USER=""
 ENV PASSWORD=""
 
-CMD ["sh", "-c", "dotnet froxy.dll --forward $FORWARD --local $LOCAL --remote $REMOTE --user $USER --pass $PASSWORD"]
+CMD ["sh", "-c", "dotnet froxy.dll --socks $SOCKS --forward $FORWARD --local $LOCAL --remote $REMOTE --user $USER --pass $PASSWORD"]
